split function update

--- a/inputfolder/aliexpress.html
+++ b/inputfolder/aliexpress.html
@@ -1,93 +1,65 @@
-<h2>Combien de temps prend la livraison Bpost ?</h2>
-<p>Bpost est l'un des opérateurs postaux majeurs en Belgique, la société propose des livraisons nationales et internationales de colis au dernier kilomètre.</p>
-<p>Le délai de livraison pour les colis nationaux est estimé le plus souvent au jour ouvrable suivant.</p>
-<p>Dans le cas des livraisons internationales, les délais de livraison sont déterminés par le type de colis, son poids, sa taille, l'option d'expédition choisie ainsi que sa destination finale.</p>
-<p>Les délais moyens de livraison à l'étranger varient entre 10 et 35 jours ouvrables environ selon la destination.</p>
-<p>Dans le cadre des livraisons de colis internationales, il suffit de mentionner l'adresse lisible et détaillée du destinataire avec le pays de destination, de s'assurer d'avoir l'emballage adapté pour l'acheminement. Le cas échéant, Bpost propose des emballages adaptés à la vente. Enfin, le colis doit être déposé dans le centre de dépôt Bpost le plus proche afin qu'il soit pris en charge.</p>
-<p>Plusieurs services de livraison Bpost sont disponibles:</p>
+<h2>¿Cuánto tiempo se tarda en entregar Aliexpress ?</h2>
+<p>Aliexpress es una plataforma de comercio electrónico que envía productos al mundo. Los vendedores que utilizan la plataforma tienen la obligación de comunicar los plazos de entrega estimados de los productos ofrecidos a la venta.</p>
+<p>Por lo general, Aliexpressofrecen dos opciones de envío:</p>
 <ul>
-    <li>Pour les livraisons en Belgique:
-        <ul>
-            <li>option Standard: Livraison à domicile pour les colis jusqu'à 30kg, avec possibilité de livraison le jour ouvrable suivant</li>
-            <li>option Garantie: Livraison à domicile ou dans un point retrait, contre signature pour les colis jusqu'à 30kg, livraison assurée le jour ouvrable suivant et avec une garantie jusqu'à 500€ pour les objets</li>
-        </ul>
-    </li>
+    <li>el modo Standard Shipping Aliexpress: el tiempo de entrega es de aproximadamente 15 a 45 días hábiles después de la fecha de envío del artículo (opción gratuita)</li>
+    <li>el modo Premium Shipping Aliexpress: el plazo de entrega es de unos 7 y 15 días laborables después del envío del artículo</li>
 </ul>
-<p>Les livraisons nationales peuvent s'effectuer à domicile, sur le lieu de travail, dans un bureau de poste local, dans une des 2300 agences Bpost, dans un point de retrait colis ou dans un distributeur de colis.</p>
-<p>Dans le cas des livraisons à l'étranger, une adresse de domicile est toujours nécessaire, sauf pour les Pays Bas ou la France ou la livraison peut se faire à un point retrait. Le site Bpost permet de trouver le point retrait le plus proche de son domicile dans ces pays.</p>
+<p>Para entregas en China, Aliexpress artículos se entregan en un plazo de aproximadamente 2 a 3 días hábiles. Dependiendo del destino, este retraso puede ser más largo, especialmente para las entregas en zonas rurales del país.</p>
+<p>Para el comercio electrónico internacional, los diferentes tipos de entrega para destinos de todo el mundo:</p>
 <ul>
-    <li>Pour les livraisons en Europe: ce service concerne notamment les livraisons vers la Pologne, l'Allemagne, la France, les Pays bas, l'Italie, l'Espagne, le Luxembourg et le Portugal:
-        <ul>
-            <li>option Standard (disponible en ligne): ce service est accessible sur le site, l'expéditeur peut gérer son envoi en autonomie en éditant une étiquette d'envoi en ligne, la livraison peut se faire à une adresse (domicile ou lieu de travail) ou dans un point de retrait en France et aux Pays Bas, cette option est disponible pour les colis jusqu'à 30kg</li>
-            <li>option Economy (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2kg et réalisée sans suivi</li>
-            <li>option Standard (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-            <li>option Express (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, contre signature, et avec avis de réception daté, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-        </ul>
-    </li>
+    <li>Aliexpress Standard Shipping: entre 15 y 45 días laborables aproximadamente</li>
+    <li>EMS Epacket (China Post): entre 17 y 36 días laborables aproximadamente</li>
+    <li>DHL Express: entre 10 y 21 días laborables aproximadamente</li>
 </ul>
+<p>Si se indica el envío gratuito en el momento de la compra, generalmente será manejado por China Post Small Packet o Aliexpress Standard Shipping.</p>
+<p>En cuanto al método de envío Epacket (más rápido que Aliexpress Standard), los plazos son los siguientes:</p>
 <ul>
-    <li>Pour les livraisons internationales:
-        <ul>
-            <li>option Standard (disponible en ligne): ce service est accessible sur le site, l'expéditeur peut gérer son envoi en autonomie en éditant une étiquette d'envoi en ligne, la livraison peut se faire à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg</li>
-            <li>option Economy (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2kg et réalisée sans suivi</li>
-            <li>option Standard (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-            <li>option Express (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, contre signature, et avec avis de réception daté, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-        </ul>
-    </li>
+    <li>a Nueva Zelanda: entre 6 y 8 días laborables aproximadamente</li>
+    <li>a México, Emiratos Árabes Unidos, Israel y Argentina: entre 7 y 15 días hábiles aproximadamente</li>
+    <li>a Francia, Canadá, Reino Unido, Países Bajos, España y Australia: entre 5 y 7 días laborables aproximadamente</li>
+    <li>a Kazajstán, Arabia Saudita, Omán, Uzbekistán: entre 7 y 20 días hábiles aproximadamente</li>
+    <li>a Tailandia, Malasia, Sri Lanka, Indonesia, Vietnam, Filipinas y Pakistán: entre 3 y 7 días laborables aproximadamente</li>
+    <li>a Sudáfrica: entre 1 y 15 días laborables aproximadamente</li>
+    <li>a Hong Kong, Japón, Taiwán, Singapur y Corea del Sur: entre 2 y 4 días laborables aproximadamente</li>
+    <li>a Brasil, India, Rusia, Bielorrusia y Ucrania: entre 7 y 10 días aproximadamente</li>
 </ul>
-<p>Les destinations couvertes par les livraisons Bpost sont les pays et territoires suivants entre autres:</p>
+<p>Los factores que pueden cambiar el tiempo de entrega son los siguientes:</p>
 <ul>
-    <li>Belgique, Allemagne, France, Pays Bas, Royaume Uni, Afrique du Sud, Albanie, Algérie, Andorre, Angola, Antilles Néerlandaises, Arabie Saoudite, Argentine, Arménie, Australie, Autriche, Azerbaïdjan, Açores, Bahamas, Bahrain, Bangladesh, Barbade, Bénin, Bermudes, Bhoutan, Biélorussie, Bolivie, Bosnie, Botswana, Brésil, Brunei, Burkina Faso, Bulgarie, Burundi, Cambodge, Cameroun, Canada, Cap Vert, Chili, Chine, Chypre, Vatican, Colombie, Corée du Sud, Costa Rica, Côte d'Ivoire, Croatie, Cuba, Danemark, Djibouti, Egypte, Equateur, Emirats Arabes Unis, Erythrée, Espagne, Estonie, Etats Unis, Éthiopie, Fidji, Finlande, Gabon, Gambie, Géorgie, Ghana, Gibraltar, Grèce, Groenland, Guadeloupe, Guam, Guernesey, Guyane, Guinée, Haïti, Hong Kong, Hongrie, Iles Caïman, Iles Vierges, Inde, Indonésie, Iran, Irlande, Islande, Israel, Italie, Jamaique, Japon, Jordanie, Kazakhstan, Kosovo, Kenya, Koweït, Laos, Lesotho, Lettonie, Libéria, Luxembourg, Lituanie, Macao, Madère, Macédoine, Madagascar, Malaisie, Malawi, Maldives, Mali, Malte, Maroc, Martinique, Mauritanie, Mexique, Moldavie, Mongolie, Mozambique, Nicaragua, Niger, Nigéria, Norvège, Nouvelle Zélande, Nouvelle Calédonie, Oman, Ouganda, Pakistan, Panama, Papouasie Nouvelle Guinée, Paraguay, Pérou, Philippines, Pologne, Polynésie française, Porto Rico, Portugal, Qatar, République centrafricaine, République du Congo, République dominicaine, Réunion Russie, Roumanie, Rwanda, Saint Martin, Salvador, Samoa, Sénégal, Sierra Leone, Serbie, Seychelles, Singapour, Slovaquie, Slovénie, Sri Lanka, Somalie, Suède, Suisse, Surinam, Syrie, Taïwan, Tanzanie, Tchad, Thaïlande, Tunisie, Togo, Turquie, Ukraine, Uruguay, Venezuela, Vietnam, Yémen, Zambie, Zimbabwé</li>
+    <li>el método de envío: dependiendo del método de transporte, el tiempo puede variar. Aliexpress trabaja con transportistas locales en China y en el extranjero, que pueden hacer que la entrega sea más rápida. El vendedor debe estar atento a los posibles modos de transporte y ser capaz de transmitir al comprador una estimación precisa del tiempo de entrega. El comprador debe estar atento a la hora de elegir la opción de entrega. También debe tenerse en cuenta que el comprador puede estar obligado a pagar tarifas de aduana cuando un transportista privado se hace cargo de su paquete, lo que puede extender el tiempo de entrega. El vendedor debe preguntar sobre estos costos potenciales e informar a sus clientes, en particular del impacto en el tiempo de entrega.</li>
+    <li>el destino: cuanto más eficiente sea el servicio postal, más rápida será la entrega. El clima local también debe tenerse en cuenta en el país o región de destino.</li>
+    <li>el período: los períodos del año o el flujo de pedidos es más importante, como los días festivos o cerca del Año Nuevo chino o la Navidad alargan los plazos de entrega. Es de esperar retrasos en países donde los servicios postales son modestos</li>
 </ul>
-<h2>Comment contacter Bpost ?</h2>
-<p>Le siège social de Bpost est situé en Belgique, à l'adresse suivante:</p>
+<p>La plataforma Aliexpress permite a los compradores de todo el mundo acceder a productos de pequeñas y medianas empresas chinas. Los países y regiones de destino son, por lo tanto, múltiples, especialmente en los Estados Unidos, Europa, Israel, en las regiones de Oriente Medio, Rusia y el norte de África.</p>
+<h2>¿Cómo me comunico con Aliexpress ?</h2>
+<p>Aliexpress tiene su sede en Alibaba sede en Hangzhou, provincia de Zhejiang, China.</p>
+<p>La dirección:</p>
 <ul>
-    <li>Pl.de la Monnaie, 1000 Bruxelles, Belgique. Le service clients est joignable pour les particuliers, du lundi au vendredi de 8h à 19h, et le samedi de 8h30 à 16h30, au numéro suivant: +32022785127</li>
+    <li>Alibaba Co, Ltd, 969 West Wen Yi Road, Yu Hang District, Hangzhou 311121, China</li>
 </ul>
-<p>Et pour les professionnels du lundi au vendredi de 8h30 à 17h30 au numéro suivant:</p>
+<p>Se puede contactar con el servicio al cliente las 24 horas del día, los 7 días de la semana a través de Alibaba al siguiente número:</p>
 <ul>
-    <li>+3202205785</li>
+    <li>(+86)571-8502-2088 (Aliexpress no tiene una línea directa per se)</li>
 </ul>
-<p>Vous pouvez joindre Bpost par courrier à l'adresse suivante:</p>
+<p>También por correo electrónico a las siguientes direcciones:</p>
 <ul>
-    <li>bpost, Boîte 5000, 1000 Bruxelles.</li>
+    <li>dispute@aliexpress.com o complaint@aliexpress.com</li>
 </ul>
-<h2>Informations à propos des livraisons Bpost</h2>
-<p>Bpost, anciennement connu sous le nom La Poste est une entreprise chargée du traitement du courrier postal et de la gestion des bureaux de poste nationaux qui commercialise des services postaux ainsi que des solutions financières et des assurances en Belgique.</p>
-<p>Initialement, la poste belge est un service gouvernemental depuis 1830, il devient la "régie des postes" en 1971 puis La poste en 1992 avant d'adopter en 2010, le nom et logo Bpost.</p>
-<p>Bpost représente le premier opérateur postal belge, l'entreprise propose des services de transport et livraison de colis au niveau national et international.</p>
-<p>La société emploie plus de 35 000 salariés en Belgique et à l'étranger, ses principaux concurrents en Europe sont TNT et Postnord entre autres.</p>
-<p>Bpost propose des solutions de livraison de colis à domicile, sur le lieu de travail, en point relais en Belgique et à travers le monde ainsi que des services d'emballage, de suivi et de traitement de commandes.</p>
-<p>Bpost propose également des services financiers, et des assurances.</p>
-<p>Ayant des bureaux à l'étranger, sur plusieurs continents, Bpost est reconnu comme un des acteurs majeurs dans la livraison du dernier kilomètre en Europe et dans le monde.</p>
-<p>Bpost collabore avec de nombreux partenaires pour assurer les livraisons dans les pays étrangers.</p>
-<p>Les services de Bpost sont de plus en plus plébiscités par les détaillants en E-commerce pour le transport de leurs marchandises et la livraison de leurs colis.</p>
-<h2>Le numéro de tracking d'une livraison Bpost</h2>
-<p>Le format de numéro de tracking Bpost se compose de 10 à 30 caractères mêlant des lettres majuscules et des chiffres. Le plus souvent, le numéro de suivi débute par deux lettres majuscules, suivies de 9 chiffres et se termine par deux lettres majuscules. Comme par exemple: AA123456789BE. Les deux lettres finales BE indiquent un envoi expédié depuis la Belgique.</p>
-<h2>Les différents états de suivi Bpost</h2>
+<h2>Información sobre entregas Aliexpress</h2>
+<p>Aliexpress es una plataforma china de comercio electrónico perteneciente al grupo Alibaba y especializada en la venta, mayorista y minorista, de productos de bajo costo, a particulares (en B2C) y a empresas e internacionalmente. La compañía fue creada en 2010 por el grupo Alibaba, con el objetivo de ofrecer el equivalente de su sitio Taobao, reservado para China, en inglés y para clientes extranjeros. Dentro del Grupo Alibaba, Aliexpress complementa las actividades de Alibaba ( B2B mayorista e internacional) y Taobao (mayorista y minorista a particulares y empresas en China).</p>
+<p>El sitio Aliexpress funciona según el mismo principio que otras plataformas como Amazon, y conecta a los vendedores chinos (o con sede en Singapur) directamente con los clientes, sin pasar por intermediarios. La diferencia es que Aliexpress es solo una plataforma y no vende productos directamente como lo hace Amazon. Aliexpress evalúa los productos y revendedores en función de las calificaciones de los clientes y los vendedores que lo utilizan son independientes. Se compara en esto con eBay, sin embargo los vendedores que utilizan Aliexpress son individuos y profesionales, lo que permite que una amplia audiencia acceda a la plataforma para vender productos.</p>
+<p>La plataforma Aliexpress se encuentra entre los 50 sitios más visitados en todo el mundo (es el sitio más visitado en Rusia). Es famoso por sus productos electrónicos, incluidos teléfonos inteligentes y accesorios de moda. El sitio es accesible a través de aplicaciones para sistemas iOS, Android y Yun OS (el sistema operativo de la empresa matriz Alibaba). Aliexpress ofrece una amplia gama de otros servicios, incluso de individuo a individuo, de empresa a individuo, pero también soluciones de pago y computación en la nube. El sitio original está en versión en inglés, pero también hay versiones en español, francés, alemán, polaco, italiano, indonesio, ruso, holandés y turco, entre otros. Se ofrece un sistema de reembolso en caso de no recepción del pedido y/o diferencia importante entre el producto y su descripción.</p>
+<p>Aliexpress es un actor importante en el comercio electrónico en China con los consumidores porque permite a las empresas acceder al mercado internacional a un costo menor. Esto permite a los comerciantes ofrecer precios bajos. La fiabilidad del sitio Aliexpress se debe a los compromisos del vendedor de comunicar los posibles plazos de entrega (máximo 45 días), y de tener una política de reembolso clara y transparente en caso de incumplimiento. Aliexpress trabaja en colaboración con muchos transportistas, a nivel local e internacional, para hacer posible la entrega de artículos a jugadores de todo el mundo.</p>
+<h2>El número de seguimiento de una entrega Aliexpress</h2>
+<p>Existen diferentes formatos de seguimiento de números Aliexpress, esto puede ser una secuencia de números como por ejemplo: 154278952345 o pueden comenzar con dos letras mayúsculas seguidas de números y/o letras como por ejemplo: YT15424562154000001 o ZA1245234227HK. Los vendedores envían los paquetes a varias compañías de transporte, lo que explica la variedad de números de seguimiento.</p>
+<p>Los negocios más utilizados por los vendedores en Aliexpress son China Post, Yun Express, Singapore Post, Flyt Express, SF Express, Yanwen, etc. Esto explica la diversidad de formatos de números de seguimiento para paquetes, como: AA123456789CN o AA123456789MY o YT123456789123 o F12343746ER34576.</p>
+<p>En general, los números de seguimiento de envíos internacionales comienzan con dos letras mayúsculas, seguidas de números, y terminan con dos letras mayúsculas, a menudo con CN o CH o HK. Por otro lado, para los envíos nacionales, los números de seguimiento generalmente se componen de solo dígitos.</p>
+<p>Cabe señalar que a medida que los pedidos son procesados por diferentes transportistas en diferentes ubicaciones, los números de seguimiento pueden cambiar durante el transporte.</p>
+<h2>Los diferentes estados de seguimiento de Aliexpress</h2>
 <ul>
-    <li>ARRIVAL AT FACILITIES</li>
-    <li>AWAITING RESPONSE FROM ADDRESSEE: DELIVERY IMPOSSIBLE - ITEM DAMAGED</li>
-    <li>ARRIVAL AT INTERNATIONAL OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM OFFICE OF EXCHANGE</li>
-    <li>CUSTOMS CLEARED: AUTHORIZED</li>
-    <li>CONFIRMATION OF PREPARATION OF THE SHIPMENT RECEIVED</li>
-    <li>BACK TO SENDER: ITEM REFUSED BY ADDRESSEE</li>
-    <li>ITEM NOT DELIVERED: ADDRESSEE WAS CONTACTED</li>
-    <li>ITEM IN DELIVERY</li>
-    <li>ITEM RELEASED FROM CUSTOMS</li>
-    <li>ITEM NOT DELIVERED: DELIVERY ATTEMPT DONE - OTHER REASON</li>
-    <li>YOUR ITEM HAS BEEN SORTED</li>
-    <li>ITEM INFORMATION REGISTERED MANUALLY AT THE COUNTER</li>
-    <li>ITEM INFORMATION REGISTERED MANUALLY</li>
-    <li>ITEM DELIVERED</li>
-    <li>NEW DELIVERY FORESEEN: AT REQUEST OF ADDRESSEE</li>
-    <li>ITEM PRESENTED: ADDRESSEE ABSENT - MESSAGE LEFT IN ADDRESSEE'S LETTERBOX</li>
-    <li>ITEM PRESENTED TO CUSTOMS FOR CONTROL</li>
-    <li>ITEM DEPOSITED</li>
-    <li>ITEM AVAILABLE AT PICKUP POINT</li>
-    <li>RETAINED AT CUSTOMS: REASON UNKNOWN</li>
-    <li>YOUR Bpost PARCEL IS READY TO BE HANDLED IN OUR INTERNATIONAL NETWORK</li>
-    <li>IRREGULARITY ITEM: PROBLEM ADDRESS</li>
-    <li>YOUR INTERNATIONAL PARCEL IS READY TO BE HANDLED BY Bpost</li>
+    <li>PURCHASED</li>
+    <li>CONSOLIDATED ORDER</li>
+    <li>PACKED ORDER</li>
+    <li>SHIPPED</li>
+    <li>ORDER IN ARRIVAL</li>
 </ul>
