--- a/outputfolder/aliexpress.html
+++ b/outputfolder/aliexpress.html
@@ -1,92 +1,74 @@
-<html><head></head><body><h2>Combien de temps prend la livraison Bpost ?</h2>
-<p> 1. Collisimo est la filiale postale qu'il existe en France, elle propose des distributions nationales et internationales en fin de ligne.</p>
-<p> 2. La plupart du temps, pour faire livrer un colis ou un envoi national, le délai de livraison sera le jour ouvrable suivant.</p>
-<p> 3. Pour les tirages internationaux, comme pour les domestiques les délais que l'on connait sont déterminé par le type du colis, son poids, sa taille, la méthode d'expédition choisie, et son lieu de destination.</p>
-<p> 4. Les délais moyens de livraison à l'étranger froissent entre 10 et 35 jours ouvrables selon le pays de destination approximativement.</p>
-<p> 5. Envois internationaux de colis: il vous suffit</p>
-<p> 6. § plus communément à la maison</p>
+<html><head></head><body><h2>¿Cuánto tiempo se tarda en entregar Aliexpress ?</h2>
+<p> 1. AliExpress es una plataforma de comercio electrónico que envía por todo el mundo  Los vendedores utilizan la plataforma deben comunicar el tiempo estimado de entrega de todos los productos ofrecidos a la venta
+2. Productos
+3. El tiempo de entrega para las opciones gratuitas es de 15 a 45 días laborables después de la fecha de envío del producto. 
+4. El tiempo de entrega de productos en funciones del grado y condición es de 7 y 15 días laboring. 
+5. Para entregas en China, si usted ha adquirido los artículos de AliExpress, el tiempo de entrega se limita a un plazo de 2 a 3 días laborables. según el destino, sin embargo, el retraso puede ser más largo especialmente para entregas en zonas rurales. 
+6. para el comercio electrónico internacional, los diferentes tipos de entrega a destinos alrededor del mundo: 
+7. En general, si se especifica el envío gratuito al comprar, generalmente será gestionado por la empresa China Post pequeño paquete ortambién el cedente comExpress standard short. 
+8. Como método de envío elfast Gastos de tramitacion Epacket (más rápido que AliExpress Standard): 
+9. all or przes diferentesfactores puedemodificar then Delivery Times areas follows :</p>
+<p> dependiendo del método de transporte, el tiempo puede variar. Además, AliExpress se apoya en los transportistas locales en China y en el extranjero, lo que significa que la entrega puede ser más rápida.#
+El vendedor tiene que tomar en cuenta los posibles medios de transporte y ser capaz de dar al comprador un cálculo más o menos preciso sobre el tiempo que el transporte tardará en llegar.</p>
 <ul>
-    <li>Pour les livraisons en Belgique:
-        <ul>
-            <li>option Standard: 7. Livraison par bpost à domicile des articles jusqu'à 30 kg, avec délai d'un jour ouvrable</li>
-            <li>option Garantie: 8. Les colis destinés à domicile ou dans un point de retrait (woods, poignant le cirewood) et qui pèsent moins de 30 kilos sont livrés assurément dès le premier jour ouvrable suivant. Surtout, ils peuvent bénéficier d'un aarantit jusqu'à 500€ pour bpost</li>
-        </ul>
-    </li>
+    <li>el modo Standard Shipping Aliexpress: El comprador debe poner atención al elegir cada opción de entrega, Asimismo, es posible que cuando un transportista privado recoge una mercancía, el comprador esté obligado a pagar derechos aduaneros, con el resultado de que el tiempo de entrega se alarga.</li>
+    <li>el modo Premium Shipping Aliexpress: El vendedor debe renegociar todos estos costos adicionales y también dejar muy claro a su cliente cuánto más tarde el envío será perjudicado.</li>
 </ul>
-<p> 9. Les livraisons nationales peuvent se faire à domicile, sur le lieu de travail, dans un bureaupost, un des 2300 bureau b post et de s, le point retrait ou automates colis</p>
-<p> 10. Dans le cas de la distribution à l'étranger, une adresse de réception est toujours impérative, sauf pour les Pays-Bas et la France dont les colis peuvent se diriger dans un point relais. B Post permet, pour ces deux pays, que l'on apporte son colis au point relais le plus proche de chez-soi en quelques clics. Cela vous facilitera la vie!</p>
+<p> 11. Mientras más eficaz es el tránsito de correo, más rápido puede ser hecho trabajo.</p>
+<p> El tiempo local también debe tenerse en cuenta en el país o región de destino.</p>
 <ul>
-    <li>Pour les livraisons en Europe: 12. Ce service est en ligne, l'expéditeur gère lui-même son envoi et imprime son étiquette d'expédition, la livraison se fait à domicile ou au travail en France et aux Pays Bas, via la Poste dans l'Hexagone on peut même choisir un point de collecte pour récupérer personellement son bien<ul>
-            <li>option Standard (disponible en ligne): 13. La livraison se fait à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2 kg et est offerte sans suivi</li>
-            <li>option Economy (disponible en bureau de vente): 14. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-            <li>option Standard (disponible en bureau de vente): 15. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis d'un poids maximal de 30 kg, contre signature, et avec avis de réception daté, un suivi est prévu pour fins de vérification par l'outil Bpost Track &amp; Trace</li>
-            <li>option Express (disponible en bureau de vente): 16. Ce service est en ligne, l'expéditeur gère lui-même son envoi et imprime son étiquette d'expédition, la livraison se fait à domicile ou au travail pour les colis jusqu'à 30 kg</li>
-        </ul>
-    </li>
+    <li>Aliexpress Standard Shipping: entre 15 y 45 días laborables aproximadamente</li>
+    <li>EMS Epacket (China Post): entre 17 y 36 días laborables aproximadamente</li>
+    <li>DHL Express: entre 10 y 21 días laborables aproximadamente</li>
 </ul>
+<p> 12. Las estaciones del año, o la marea de pedidos es más importante, como fiesta días o justo antes del Año Nuevo chino y Navidad tiempo ampliado en la entrega.</p>
+<p> El servicio postal en los países más pequeños está por supuesto bastante claro retrasará la fecha de entrega.</p>
 <ul>
-    <li>Pour les livraisons internationales:
-        <ul>
-            <li>option Standard (disponible en ligne): 17. La livraison se fait à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2 kg et est offerte sans suivi</li>
-            <li>option Economy (disponible en bureau de vente): 18. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
-            <li>option Standard (disponible en bureau de vente): 19. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, contre signature et avec avis de réception daté. Un suivi est effectué via l'outil Bpost Track &amp; Trace</li>
-            <li>option Express (disponible en bureau de vente): 20. Les destinations couvertes par Bpost comprennent entre autres les pays et territoires</li>
-        </ul>
-    </li>
+    <li>a Nueva Zelanda: entre 6 y 8 días laborables aproximadamente</li>
+    <li>a México, Emiratos Árabes Unidos, Israel y Argentina: entre 7 y 15 días hábiles aproximadamente</li>
+    <li>a Francia, Canadá, Reino Unido, Países Bajos, España y Australia: entre 5 y 7 días laborables aproximadamente</li>
+    <li>a Kazajstán, Arabia Saudita, Omán, Uzbekistán: entre 7 y 20 días hábiles aproximadamente</li>
+    <li>a Tailandia, Malasia, Sri Lanka, Indonesia, Vietnam, Filipinas y Pakistán: entre 3 y 7 días laborables aproximadamente</li>
+    <li>a Sudáfrica: entre 1 y 15 días laborables aproximadamente</li>
+    <li>a Hong Kong, Japón, Taiwán, Singapur y Corea del Sur: entre 2 y 4 días laborables aproximadamente</li>
+    <li>a Brasil, India, Rusia, Bielorrusia y Ucrania: entre 7 y 10 días aproximadamente</li>
 </ul>
-<p> 21. Belgique Pays-Bas Allemagne Royaume-Uni Afrique du Sud Albanie Algérie Andorre Angola Antilles néerlandaises Arabie saoudite Argentine Australie Autriche Azerbaidjan Les Açores Bahamas Bahreïn Bangladesh Barbade Bénin Bermudes Bhoutan Biélorussie Bosnie Botswana Brésil Brunei Burkina Faso Bulgarie Burundi Cambodge Cameroun Canada Cap Vert Chili Chine Chypre Cité du Vatican Colombie Corée du Sud Costa Rica Côte d'ivoire Croatie Cuba Danemark Djibouti Egypte Equateur Emirats arabes unis Erythrée Espagne Estonie États-Unis Éthiopie Fidji Finlande Gabon Gambie Géorgie Ghana Gibraltar Grèce Groenland Guadeloupe Guam Guernesey Guyane française Guinée Haïti HongKong Hongrie Iles Caïman Iles Vierges Inde Indonésie Iran Irlande Islande Israel Italie Jamaïque Japon Jordanie Kazakhstan Kosovo Kenya Koweït Laos Lesotho Lettonie Liberia Liechtenstein surfer Macao Madère Macédoine Madagascar Malaisie Malawi Maldives Mali Malte Maroc Martinique Mauritanie Mexique Moldavie Mongolie Mozambique Nicaragua Niger Nigeria Norvège Nouvelle Zélande Nouvelle Calédonie Oman Ouganda</p>
+<p> 13. Es una organización que permite a los compradores de todo el mundo acceder a los productos de pequeñas y medias empresas chinas. Así que hay de destino varios países y regiones, especialmente en los Estados Unidos, Europa, e incluso al norte de África en Rusia las zonas medias orientales de Israel th.</p>
 <ul>
-    <li> Pakistan Panama Papouasie-Nlle-Guinée Paraguay Pérou Philippines Pologne Polynésie française Porto Rico</li>
+    <li>el método de envío: Es un comerciante chino de la familia Alibaba.</li>
+    <li>el destino: 14</li>
+    <li>el período: 15. Alibaba Alliance, 969 West Wen Yi Road, Yuhang District, Hangzhou 311121, China</li>
 </ul>
-<h2>Comment contacter Bpost ?</h2>
-<p> Portugal Qatar République centrafricaine République du Congo République dominicaine Réunion Russie Roumanie</p>
+<p> 16. Póngase en contacto con servicio al cliente las 24 horas del día, los 7 días de la semana a través de Alibaba en este número de teléfono:</p>
+<h2>¿Cómo me comunico con Aliexpress ?</h2>
+<p> 17. (+86)571-8502-2088 Aliexpress no tiene una línea directa per se</p>
+<p>La dirección:</p>
 <ul>
-    <li>Pl.de la Monnaie, 1000 Bruxelles, Belgique. Le service clients est joignable pour les particuliers, du lundi au vendredi de 8h à 19h, et le samedi de 8h30 à 16h30, au numéro suivant: +32022785127</li>
+    <li> 18. O bien en la siguiente dirección de correo electrónico:</li>
 </ul>
-<p> Rwanda Saint Marin Salvador Samoa Sénégal Sierra Leone Serbie Seychelles Singapore volatile Slovaquie Slovénie</p>
+<p> 19. Aliexpress es una plataforma de comercio electrónico en China perteneciente al Grupo Alibaba, que se especializa en productos baratos y lo vende tanto al por mayor como por menor. Satisface necesidades de particulares (cliente final en B2C ) y empresas, en una relación internacional. The company was created in 2010 by the Alibaba Group as a way to offer English for its domestic Chinese market equivalent of Taobao (a bit like eBay) and a resource for foreign consumers. Within the Alibaba Group, Aliexpress carries out complementary roles to Alibaba (B2B wholesale and International) and Taobao (wholesale and retail to individuals and companies within China).</p>
 <ul>
-    <li>+3202205785</li>
+    <li> 20. De hecho, el sitio web de Aliexpress opera exactamente del mismo modo que muchas otras plataformas de venta de productos en Internet, como por ejemplo Amazon. Actúa como intermediario y demuestra comprando a vendedores chinos (o afincados en Singapur) directamente por parte de los clientes. La diferencia consiste en que Aliexpress es apenas una plataforma y no vende productos de forma directa al consumidor como hace Amazon.. Aliexpress evalúa los productos y los revendedores de acuerdo a cómo lo señalan las calificaciones de clientes que le hagan y vendedores de Aliexpress son independientes entre sí y de la propia tienda. Compare esto con eBay, aunque se aún a vendedores individuales y profesionales, lo que significa que una gran cantidad de público puede acceder a la página para vender productos.</li>
 </ul>
-<p> Sri Lanka Somalia Suède Suisse Suriname Syrie Taiwan Tanzanie Tchad Thaïlande Tunisie Togo Turquie Ukraine</p>
+<p> Hasta que finalmente llega el pedido cobrado en su totalidad (o 60 días después de haber realizado el pago). En ese tiempo le ofreceré el 90% de los costes del producto como reembolso, o podría optar por un artículo gratuito para compensar la pérdida.</p>
 <ul>
-    <li>bpost, Boîte 5000, 1000 Bruxelles.</li>
+    <li>dispute@aliexpress.com o complaint@aliexpress.com</li>
 </ul>
-<h2>Informations à propos des livraisons Bpost</h2>
-<p> Uruguay Venezuela Vietnam Yémen Zambie Zimbabwe</p>
-<p> 22. Le siège social de Bpost est établi en Belgique et situé à l'adresse</p>
-<p> 23. Pour les professionnels, du lundi au vendredi de 8h30 à 17h30, le numéro est le suivant:</p>
-<p> 24. Adresser une lettre à Bpost à l'adresse suivante:</p>
-<p> 25 Bpost, qui se nommait autrefois Vlle de Ets une société privée qui travaille dans le secteur de la poste et des messageries nationales en Belgique; c'est un grand fournisseur de services postaux sans oublier que ses stations de telephone-mobile abondent aussi certain service financier pour vous rappeler comme elle assurements life insurance-, etc les opérations garantit elles-memes cependant tant mieux ce qu' est sous-entendu toute forme d' assurance n' intervention pas que pour le proche à portée elle a meme beaucoup de ra promotion en bénéficier marketing operations</p>
-<p> 26. initialement, le 2 octobre 1830 à 1971- le service postal national, en Belgique est géré par l'Etat et devient la "régie des postes" en 1971. Elle s' appelle "La Poste" A compter de 1992 et jusqu'à son adoption comme logo en 2010 laisse les living final months duringc 'est des entreprises même.</p>
-<p> 27. Bpost est la première entreprise de courrier belge, qui fournit des services de colis transport et livraison au niveau national ou international.</p>
-<p> 28. Elle emploie plus de 35.000 employés et salariés en Belgique et à l'étranger. Parmi ses principaux concurrents en Europe se trouvent d'autres sociétés comme la Netherland's TNT ou Postnord de Suède.</p>
-<p> 29. Bpost offre des solutions de livraison de colis à domicile en Belgique, sur le lieu de travail et en point relais ainsi que dans le monde entier et fournit aussi des services d'emballage, traçabilité des marchandises traitement de commande.</p>
-<h2>Le numéro de tracking d'une livraison Bpost</h2>
-<p> 30. Bpost propose également des services financières, et des assurances.</p>
-<h2>Les différents états de suivi Bpost</h2>
+<h2>Información sobre entregas Aliexpress</h2>
+<p> 24. El China Post, Yun Express, Singapore Post, Flyt Express, SF Express, Yanwen, etc, son servicios de transporte más utilizadas por los vendedores en Aliexpress. Así que hay muchas clases distintas de números de seguimiento para paquetes: AA123456789CN; AA123456789MY; YT123456789123; F12343746ER34576.</p>
+<p> 25. Generalmente, siempre que se trate de envíos internacionales, los números de seguimiento comienzan con dos letras mayúsculas seguidas de números que a menudo terminan con dos letras mayúsculas CN o CH o HK. Por el contrario, para envíos nacionales, estos números suelen constar de solo cifras.</p>
+<p> 26. Téngase en cuenta que si los pedidos son procesados por diferentes transportistas en diferentes sedes, es probable que los números de seguimiento cambien mientras se transporta el paquete.</p>
+<p>Aliexpress es un actor importante en el comercio electrónico en China con los consumidores porque permite a las empresas acceder al mercado internacional a un costo menor. Esto permite a los comerciantes ofrecer precios bajos. La fiabilidad del sitio Aliexpress se debe a los compromisos del vendedor de comunicar los posibles plazos de entrega (máximo 45 días), y de tener una política de reembolso clara y transparente en caso de incumplimiento. Aliexpress trabaja en colaboración con muchos transportistas, a nivel local e internacional, para hacer posible la entrega de artículos a jugadores de todo el mundo.</p>
+<h2>El número de seguimiento de una entrega Aliexpress</h2>
+<p>Existen diferentes formatos de seguimiento de números Aliexpress, esto puede ser una secuencia de números como por ejemplo: 154278952345 o pueden comenzar con dos letras mayúsculas seguidas de números y/o letras como por ejemplo: YT15424562154000001 o ZA1245234227HK. Los vendedores envían los paquetes a varias compañías de transporte, lo que explica la variedad de números de seguimiento.</p>
+<p>Los negocios más utilizados por los vendedores en Aliexpress son China Post, Yun Express, Singapore Post, Flyt Express, SF Express, Yanwen, etc. Esto explica la diversidad de formatos de números de seguimiento para paquetes, como: AA123456789CN o AA123456789MY o YT123456789123 o F12343746ER34576.</p>
+<p>En general, los números de seguimiento de envíos internacionales comienzan con dos letras mayúsculas, seguidas de números, y terminan con dos letras mayúsculas, a menudo con CN o CH o HK. Por otro lado, para los envíos nacionales, los números de seguimiento generalmente se componen de solo dígitos.</p>
+<p>Cabe señalar que a medida que los pedidos son procesados por diferentes transportistas en diferentes ubicaciones, los números de seguimiento pueden cambiar durante el transporte.</p>
+<h2>Los diferentes estados de seguimiento de Aliexpress</h2>
 <ul>
-    <li>ARRIVAL AT FACILITIES</li>
-    <li>AWAITING RESPONSE FROM ADDRESSEE: DELIVERY IMPOSSIBLE - ITEM DAMAGED</li>
-    <li>ARRIVAL AT INTERNATIONAL OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM OFFICE OF EXCHANGE</li>
-    <li>CUSTOMS CLEARED: AUTHORIZED</li>
-    <li> 31. Bpost dispose de bureaux à l'étranger sur plusieurs continents, reconnue comme l'un des acteurs principaux mondiaux dans la distribution du dernier kilomètre de la en Europe et dans le monde.</li>
-    <li>BACK TO SENDER: ITEM REFUSED BY ADDRESSEE</li>
-    <li>ITEM NOT DELIVERED: ADDRESSEE WAS CONTACTED</li>
-    <li>ITEM IN DELIVERY</li>
-    <li>ITEM RELEASED FROM CUSTOMS</li>
-    <li>ITEM NOT DELIVERED: DELIVERY ATTEMPT DONE - OTHER REASON</li>
-    <li>YOUR ITEM HAS BEEN SORTED</li>
-    <li> 32. Bpost collabore avec de nombreux partenaires pour assurer la livraison de mail dans les pays étrangers.</li>
-    <li>ITEM INFORMATION REGISTERED MANUALLY</li>
-    <li>ITEM DELIVERED</li>
-    <li>NEW DELIVERY FORESEEN: AT REQUEST OF ADDRESSEE</li>
-    <li>ITEM PRESENTED: 33. De plus en plus prisés par les e-commerçants, les services de Bpost rencontrent un grand succès sur le marché pour le transport de marchandises et la livraison des colis.</li>
-    <li>ITEM PRESENTED TO CUSTOMS FOR CONTROL</li>
-    <li>ITEM DEPOSITED</li>
-    <li>ITEM AVAILABLE AT PICKUP POINT</li>
-    <li>RETAINED AT CUSTOMS: REASON UNKNOWN</li>
-    <li> 34.Il y a entre 10 et 30 caractères dans un numéro de suivi Bpost qui mélange des lettres majuscules aux chiffres. En règle générale, le numéro se compose de deux lettres majuscules au début séparées d'un tiret, puis neuf chiffres et enfin deux lettres majuscules à la fin. Comme par exemple: AA123456789BE. Les deux dernières lettres BE indiquent que le colis a été expédié depuis la Belgique.</li>
-    <li>IRREGULARITY ITEM: PROBLEM ADDRESS</li>
-    <li> 35. CONFIRMATION DE PREPARATION DE L'ENVOI REÇUE</li>
+    <li>PURCHASED</li>
+    <li>CONSOLIDATED ORDER</li>
+    <li>PACKED ORDER</li>
+    <li>SHIPPED</li>
+    <li>ORDER IN ARRIVAL</li>
 </ul></body></html>
